<resources>
    <string name="app_name">codemail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Naman Kumar Jha</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Buy Books</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_sell">Sell Books</string>
    <string name="menu_buy">Buy Books</string>
    <string name="menu_help">Help</string>
    <string name="menu_more">More</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_payment">Payment Methods</string>
    <string name="menu_bookshop">Book Shop</string>
    <string name="menu_YourOrders">My Orders</string>
    <string name="menu_mywishlist">My Wishlist</string>
    <string name="search">Search</string>
</resources>
